[package]

name = "mergequeue-benchmarker"
version = "0.0.0"
authors = ["Lorenzo Martini <lmartini@student.ethz.ch>"]
readme = "README.md"

description = "Program to microbenchmark timely's MergeQueue"

[dependencies]
clap="2"
core_affinity = "0.5.9"
timely = {  git = "https://github.com/frankmcsherry/timely-dataflow" }
streaming-harness-hdrhist = { git = "https://github.com/utaal/hdrhist-rust" }
